# src/controllers/company.controller.ts
@@ -1,10 +1,23 @@
-import { Body, Example, Get, OperationId, Path, Post, Query, Response, Route, SuccessResponse, Tags } from 'tsoa';
-import { CompanyDto, CreateCompanyDto }                                                               from '../dtos/company.dto';
-import { Controller }                                                             from '@tsoa/runtime';
-import { Types }                                                                  from 'mongoose';
-import CompanyService                                                             from '../services/company.service';
-import companyService                                                             from '../services/company.service';
-import { InvalidateEmpty, ValidateObjectIds }                                     from '../lib/validation.lib';
+import {
+    Body, Delete,
+    Example,
+    Get,
+    OperationId,
+    Patch,
+    Path,
+    Post,
+    Query,
+    Response,
+    Route,
+    SuccessResponse,
+    Tags,
+}                                             from 'tsoa';
+import { CompanyDto, CreateCompanyDto }       from '../dtos/company.dto';
+import { Controller }                         from '@tsoa/runtime';
+import { Types }                              from 'mongoose';
+import CompanyService                         from '../services/company.service';
+import companyService                         from '../services/company.service';
+import { InvalidateEmpty, ValidateObjectIds } from '../lib/validation.lib';
 
 
 @Route('companies')
@@ -31,6 +44,28 @@ export class CompanyController extends Controller {
         const company = await companyService.create(body);
 
         return InvalidateEmpty(company);
+    }
+
+    @Patch('/{companyId}')
+    @SuccessResponse(201, 'Created')
+    @Example<CreateCompanyDto>({
+        name:        'Industria Freios Supremos',
+        description: 'Freios e ABS.',
+        industry:    'auto parts manufacturer',
+    })
+    @OperationId('createCompany')
+    public async update(@Path() companyId: Types.ObjectId, @Body() body: CreateCompanyDto): Promise<CompanyDto> {
+        const company = await companyService.update(companyId, body);
+
+        return InvalidateEmpty(company);
+    }
+
+    @Delete('/{companyId}')
+    @SuccessResponse(204, 'No Content')
+    @OperationId('deleteCompany')
+    public async delete(@Path() companyId: Types.ObjectId): Promise<void> {
+        ValidateObjectIds({ companyId });
+        InvalidateEmpty(await companyService.delete(companyId));
     }
 
     @Get('/{companyId}')
